# rust_cwget

./: .gitignore  Cargo.toml  README.md
src/: main.rs
