[package]
name = "cwget"
version = "0.1.0"
authors = ["Philip <philipkristoffersen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11"}
tokio = { version = "1", features = ["full"] }
clap="3.0.0-beta.2"
rayon="1.3.1"
futures="0.3.12"